added caching mechanism to album photos